docs/upbound-provider-aws/1.6/elb/v1beta1/elb.md
---
permalink: /upbound-provider-aws/1.6/elb/v1beta1/elb/
---

# elb.v1beta1.elb

"ELB is the Schema for the ELBs API. Provides an Elastic Load Balancer resource."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withAccessLogs(accessLogs)`](#fn-specforproviderwithaccesslogs)
    * [`fn withAccessLogsMixin(accessLogs)`](#fn-specforproviderwithaccesslogsmixin)
    * [`fn withAvailabilityZones(availabilityZones)`](#fn-specforproviderwithavailabilityzones)
    * [`fn withAvailabilityZonesMixin(availabilityZones)`](#fn-specforproviderwithavailabilityzonesmixin)
    * [`fn withConnectionDraining(connectionDraining)`](#fn-specforproviderwithconnectiondraining)
    * [`fn withConnectionDrainingTimeout(connectionDrainingTimeout)`](#fn-specforproviderwithconnectiondrainingtimeout)
    * [`fn withCrossZoneLoadBalancing(crossZoneLoadBalancing)`](#fn-specforproviderwithcrosszoneloadbalancing)
    * [`fn withDesyncMitigationMode(desyncMitigationMode)`](#fn-specforproviderwithdesyncmitigationmode)
    * [`fn withHealthCheck(healthCheck)`](#fn-specforproviderwithhealthcheck)
    * [`fn withHealthCheckMixin(healthCheck)`](#fn-specforproviderwithhealthcheckmixin)
    * [`fn withIdleTimeout(idleTimeout)`](#fn-specforproviderwithidletimeout)
    * [`fn withInstances(instances)`](#fn-specforproviderwithinstances)
    * [`fn withInstancesMixin(instances)`](#fn-specforproviderwithinstancesmixin)
    * [`fn withInstancesRefs(instancesRefs)`](#fn-specforproviderwithinstancesrefs)
    * [`fn withInstancesRefsMixin(instancesRefs)`](#fn-specforproviderwithinstancesrefsmixin)
    * [`fn withInternal(internal)`](#fn-specforproviderwithinternal)
    * [`fn withListener(listener)`](#fn-specforproviderwithlistener)
    * [`fn withListenerMixin(listener)`](#fn-specforproviderwithlistenermixin)
    * [`fn withRegion(region)`](#fn-specforproviderwithregion)
    * [`fn withSecurityGroups(securityGroups)`](#fn-specforproviderwithsecuritygroups)
    * [`fn withSecurityGroupsMixin(securityGroups)`](#fn-specforproviderwithsecuritygroupsmixin)
    * [`fn withSourceSecurityGroup(sourceSecurityGroup)`](#fn-specforproviderwithsourcesecuritygroup)
    * [`fn withSubnets(subnets)`](#fn-specforproviderwithsubnets)
    * [`fn withSubnetsMixin(subnets)`](#fn-specforproviderwithsubnetsmixin)
    * [`fn withSubnetsRefs(subnetsRefs)`](#fn-specforproviderwithsubnetsrefs)
    * [`fn withSubnetsRefsMixin(subnetsRefs)`](#fn-specforproviderwithsubnetsrefsmixin)
    * [`fn withTags(tags)`](#fn-specforproviderwithtags)
    * [`fn withTagsMixin(tags)`](#fn-specforproviderwithtagsmixin)
    * [`obj spec.forProvider.accessLogs`](#obj-specforprovideraccesslogs)
      * [`fn withBucket(bucket)`](#fn-specforprovideraccesslogswithbucket)
      * [`fn withBucketPrefix(bucketPrefix)`](#fn-specforprovideraccesslogswithbucketprefix)
      * [`fn withEnabled(enabled)`](#fn-specforprovideraccesslogswithenabled)
      * [`fn withInterval(interval)`](#fn-specforprovideraccesslogswithinterval)
    * [`obj spec.forProvider.healthCheck`](#obj-specforproviderhealthcheck)
      * [`fn withHealthyThreshold(healthyThreshold)`](#fn-specforproviderhealthcheckwithhealthythreshold)
      * [`fn withInterval(interval)`](#fn-specforproviderhealthcheckwithinterval)
      * [`fn withTarget(target)`](#fn-specforproviderhealthcheckwithtarget)
      * [`fn withTimeout(timeout)`](#fn-specforproviderhealthcheckwithtimeout)
      * [`fn withUnhealthyThreshold(unhealthyThreshold)`](#fn-specforproviderhealthcheckwithunhealthythreshold)
    * [`obj spec.forProvider.instancesRefs`](#obj-specforproviderinstancesrefs)
      * [`fn withName(name)`](#fn-specforproviderinstancesrefswithname)
      * [`obj spec.forProvider.instancesRefs.policy`](#obj-specforproviderinstancesrefspolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderinstancesrefspolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderinstancesrefspolicywithresolve)
    * [`obj spec.forProvider.instancesSelector`](#obj-specforproviderinstancesselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderinstancesselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderinstancesselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderinstancesselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.instancesSelector.policy`](#obj-specforproviderinstancesselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderinstancesselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderinstancesselectorpolicywithresolve)
    * [`obj spec.forProvider.listener`](#obj-specforproviderlistener)
      * [`fn withInstancePort(instancePort)`](#fn-specforproviderlistenerwithinstanceport)
      * [`fn withInstanceProtocol(instanceProtocol)`](#fn-specforproviderlistenerwithinstanceprotocol)
      * [`fn withLbPort(lbPort)`](#fn-specforproviderlistenerwithlbport)
      * [`fn withLbProtocol(lbProtocol)`](#fn-specforproviderlistenerwithlbprotocol)
      * [`fn withSslCertificateId(sslCertificateId)`](#fn-specforproviderlistenerwithsslcertificateid)
    * [`obj spec.forProvider.subnetsRefs`](#obj-specforprovidersubnetsrefs)
      * [`fn withName(name)`](#fn-specforprovidersubnetsrefswithname)
      * [`obj spec.forProvider.subnetsRefs.policy`](#obj-specforprovidersubnetsrefspolicy)
        * [`fn withResolution(resolution)`](#fn-specforprovidersubnetsrefspolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforprovidersubnetsrefspolicywithresolve)
    * [`obj spec.forProvider.subnetsSelector`](#obj-specforprovidersubnetsselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforprovidersubnetsselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforprovidersubnetsselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforprovidersubnetsselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.subnetsSelector.policy`](#obj-specforprovidersubnetsselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforprovidersubnetsselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforprovidersubnetsselectorpolicywithresolve)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withAccessLogs(accessLogs)`](#fn-specinitproviderwithaccesslogs)
    * [`fn withAccessLogsMixin(accessLogs)`](#fn-specinitproviderwithaccesslogsmixin)
    * [`fn withAvailabilityZones(availabilityZones)`](#fn-specinitproviderwithavailabilityzones)
    * [`fn withAvailabilityZonesMixin(availabilityZones)`](#fn-specinitproviderwithavailabilityzonesmixin)
    * [`fn withConnectionDraining(connectionDraining)`](#fn-specinitproviderwithconnectiondraining)
    * [`fn withConnectionDrainingTimeout(connectionDrainingTimeout)`](#fn-specinitproviderwithconnectiondrainingtimeout)
    * [`fn withCrossZoneLoadBalancing(crossZoneLoadBalancing)`](#fn-specinitproviderwithcrosszoneloadbalancing)
    * [`fn withDesyncMitigationMode(desyncMitigationMode)`](#fn-specinitproviderwithdesyncmitigationmode)
    * [`fn withHealthCheck(healthCheck)`](#fn-specinitproviderwithhealthcheck)
    * [`fn withHealthCheckMixin(healthCheck)`](#fn-specinitproviderwithhealthcheckmixin)
    * [`fn withIdleTimeout(idleTimeout)`](#fn-specinitproviderwithidletimeout)
    * [`fn withInstances(instances)`](#fn-specinitproviderwithinstances)
    * [`fn withInstancesMixin(instances)`](#fn-specinitproviderwithinstancesmixin)
    * [`fn withInstancesRefs(instancesRefs)`](#fn-specinitproviderwithinstancesrefs)
    * [`fn withInstancesRefsMixin(instancesRefs)`](#fn-specinitproviderwithinstancesrefsmixin)
    * [`fn withInternal(internal)`](#fn-specinitproviderwithinternal)
    * [`fn withListener(listener)`](#fn-specinitproviderwithlistener)
    * [`fn withListenerMixin(listener)`](#fn-specinitproviderwithlistenermixin)
    * [`fn withSecurityGroups(securityGroups)`](#fn-specinitproviderwithsecuritygroups)
    * [`fn withSecurityGroupsMixin(securityGroups)`](#fn-specinitproviderwithsecuritygroupsmixin)
    * [`fn withSourceSecurityGroup(sourceSecurityGroup)`](#fn-specinitproviderwithsourcesecuritygroup)
    * [`fn withSubnets(subnets)`](#fn-specinitproviderwithsubnets)
    * [`fn withSubnetsMixin(subnets)`](#fn-specinitproviderwithsubnetsmixin)
    * [`fn withSubnetsRefs(subnetsRefs)`](#fn-specinitproviderwithsubnetsrefs)
    * [`fn withSubnetsRefsMixin(subnetsRefs)`](#fn-specinitproviderwithsubnetsrefsmixin)
    * [`fn withTags(tags)`](#fn-specinitproviderwithtags)
    * [`fn withTagsMixin(tags)`](#fn-specinitproviderwithtagsmixin)
    * [`obj spec.initProvider.accessLogs`](#obj-specinitprovideraccesslogs)
      * [`fn withBucket(bucket)`](#fn-specinitprovideraccesslogswithbucket)
      * [`fn withBucketPrefix(bucketPrefix)`](#fn-specinitprovideraccesslogswithbucketprefix)
      * [`fn withEnabled(enabled)`](#fn-specinitprovideraccesslogswithenabled)
      * [`fn withInterval(interval)`](#fn-specinitprovideraccesslogswithinterval)
    * [`obj spec.initProvider.healthCheck`](#obj-specinitproviderhealthcheck)
      * [`fn withHealthyThreshold(healthyThreshold)`](#fn-specinitproviderhealthcheckwithhealthythreshold)
      * [`fn withInterval(interval)`](#fn-specinitproviderhealthcheckwithinterval)
      * [`fn withTarget(target)`](#fn-specinitproviderhealthcheckwithtarget)
      * [`fn withTimeout(timeout)`](#fn-specinitproviderhealthcheckwithtimeout)
      * [`fn withUnhealthyThreshold(unhealthyThreshold)`](#fn-specinitproviderhealthcheckwithunhealthythreshold)
    * [`obj spec.initProvider.instancesRefs`](#obj-specinitproviderinstancesrefs)
      * [`fn withName(name)`](#fn-specinitproviderinstancesrefswithname)
      * [`obj spec.initProvider.instancesRefs.policy`](#obj-specinitproviderinstancesrefspolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderinstancesrefspolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderinstancesrefspolicywithresolve)
    * [`obj spec.initProvider.instancesSelector`](#obj-specinitproviderinstancesselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderinstancesselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderinstancesselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderinstancesselectorwithmatchlabelsmixin)
      * [`obj spec.initProvider.instancesSelector.policy`](#obj-specinitproviderinstancesselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderinstancesselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderinstancesselectorpolicywithresolve)
    * [`obj spec.initProvider.listener`](#obj-specinitproviderlistener)
      * [`fn withInstancePort(instancePort)`](#fn-specinitproviderlistenerwithinstanceport)
      * [`fn withInstanceProtocol(instanceProtocol)`](#fn-specinitproviderlistenerwithinstanceprotocol)
      * [`fn withLbPort(lbPort)`](#fn-specinitproviderlistenerwithlbport)
      * [`fn withLbProtocol(lbProtocol)`](#fn-specinitproviderlistenerwithlbprotocol)
      * [`fn withSslCertificateId(sslCertificateId)`](#fn-specinitproviderlistenerwithsslcertificateid)
    * [`obj spec.initProvider.subnetsRefs`](#obj-specinitprovidersubnetsrefs)
      * [`fn withName(name)`](#fn-specinitprovidersubnetsrefswithname)
      * [`obj spec.initProvider.subnetsRefs.policy`](#obj-specinitprovidersubnetsrefspolicy)
        * [`fn withResolution(resolution)`](#fn-specinitprovidersubnetsrefspolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitprovidersubnetsrefspolicywithresolve)
    * [`obj spec.initProvider.subnetsSelector`](#obj-specinitprovidersubnetsselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitprovidersubnetsselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specinitprovidersubnetsselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitprovidersubnetsselectorwithmatchlabelsmixin)
      * [`obj spec.initProvider.subnetsSelector.policy`](#obj-specinitprovidersubnetsselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitprovidersubnetsselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitprovidersubnetsselectorpolicywithresolve)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of ELB

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"ELBSpec defines the desired state of ELB"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external\nwhen this managed resource is deleted - either \"Delete\" or \"Orphan\" the\nexternal resource.\nThis field is planned to be deprecated in favor of the ManagementPolicies\nfield in a future release. Currently, both could be set independently and\nnon-default values would be honored if the feature flag is enabled.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withAccessLogs

```ts
withAccessLogs(accessLogs)
```

"An Access Logs block. Access Logs documented below."

### fn spec.forProvider.withAccessLogsMixin

```ts
withAccessLogsMixin(accessLogs)
```

"An Access Logs block. Access Logs documented below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withAvailabilityZones

```ts
withAvailabilityZones(availabilityZones)
```

"The AZ's to serve traffic in."

### fn spec.forProvider.withAvailabilityZonesMixin

```ts
withAvailabilityZonesMixin(availabilityZones)
```

"The AZ's to serve traffic in."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withConnectionDraining

```ts
withConnectionDraining(connectionDraining)
```

"Boolean to enable connection draining. Default: false"

### fn spec.forProvider.withConnectionDrainingTimeout

```ts
withConnectionDrainingTimeout(connectionDrainingTimeout)
```

"The time in seconds to allow for connections to drain. Default: 300"

### fn spec.forProvider.withCrossZoneLoadBalancing

```ts
withCrossZoneLoadBalancing(crossZoneLoadBalancing)
```

"Enable cross-zone load balancing. Default: true"

### fn spec.forProvider.withDesyncMitigationMode

```ts
withDesyncMitigationMode(desyncMitigationMode)
```

"Determines how the load balancer handles requests that might pose a security risk to an application due to HTTP desync. Valid values are monitor, defensive (default), strictest."

### fn spec.forProvider.withHealthCheck

```ts
withHealthCheck(healthCheck)
```

"A health_check block. Health Check documented below."

### fn spec.forProvider.withHealthCheckMixin

```ts
withHealthCheckMixin(healthCheck)
```

"A health_check block. Health Check documented below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withIdleTimeout

```ts
withIdleTimeout(idleTimeout)
```

"The time in seconds that the connection is allowed to be idle. Default: 60"

### fn spec.forProvider.withInstances

```ts
withInstances(instances)
```

"A list of instance ids to place in the ELB pool."

### fn spec.forProvider.withInstancesMixin

```ts
withInstancesMixin(instances)
```

"A list of instance ids to place in the ELB pool."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withInstancesRefs

```ts
withInstancesRefs(instancesRefs)
```

"References to Instance in ec2 to populate instances."

### fn spec.forProvider.withInstancesRefsMixin

```ts
withInstancesRefsMixin(instancesRefs)
```

"References to Instance in ec2 to populate instances."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withInternal

```ts
withInternal(internal)
```

"If true, ELB will be an internal ELB."

### fn spec.forProvider.withListener

```ts
withListener(listener)
```

"A list of listener blocks. Listeners documented below."

### fn spec.forProvider.withListenerMixin

```ts
withListenerMixin(listener)
```

"A list of listener blocks. Listeners documented below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withRegion

```ts
withRegion(region)
```

"Region is the region you'd like your resource to be created in."

### fn spec.forProvider.withSecurityGroups

```ts
withSecurityGroups(securityGroups)
```

"A list of security group IDs to assign to the ELB.\nOnly valid if creating an ELB within a VPC"

### fn spec.forProvider.withSecurityGroupsMixin

```ts
withSecurityGroupsMixin(securityGroups)
```

"A list of security group IDs to assign to the ELB.\nOnly valid if creating an ELB within a VPC"

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withSourceSecurityGroup

```ts
withSourceSecurityGroup(sourceSecurityGroup)
```

"The name of the security group that you can use as\npart of your inbound rules for your load balancer's back-end application\ninstances. Use this for Classic or Default VPC only."

### fn spec.forProvider.withSubnets

```ts
withSubnets(subnets)
```

"A list of subnet IDs to attach to the ELB. When an update to subnets will remove all current subnets, this will force a new resource."

### fn spec.forProvider.withSubnetsMixin

```ts
withSubnetsMixin(subnets)
```

"A list of subnet IDs to attach to the ELB. When an update to subnets will remove all current subnets, this will force a new resource."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withSubnetsRefs

```ts
withSubnetsRefs(subnetsRefs)
```

"References to Subnet in ec2 to populate subnets."

### fn spec.forProvider.withSubnetsRefsMixin

```ts
withSubnetsRefsMixin(subnetsRefs)
```

"References to Subnet in ec2 to populate subnets."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withTags

```ts
withTags(tags)
```

"Key-value map of resource tags."

### fn spec.forProvider.withTagsMixin

```ts
withTagsMixin(tags)
```

"Key-value map of resource tags."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.accessLogs

"An Access Logs block. Access Logs documented below."

### fn spec.forProvider.accessLogs.withBucket

```ts
withBucket(bucket)
```

"The S3 bucket name to store the logs in."

### fn spec.forProvider.accessLogs.withBucketPrefix

```ts
withBucketPrefix(bucketPrefix)
```

"The S3 bucket prefix. Logs are stored in the root if not configured."

### fn spec.forProvider.accessLogs.withEnabled

```ts
withEnabled(enabled)
```

"Boolean to enable / disable access_logs. Default is true"

### fn spec.forProvider.accessLogs.withInterval

```ts
withInterval(interval)
```

"The publishing interval in minutes. Valid values: 5 and 60. Default: 60"

## obj spec.forProvider.healthCheck

"A health_check block. Health Check documented below."

### fn spec.forProvider.healthCheck.withHealthyThreshold

```ts
withHealthyThreshold(healthyThreshold)
```

"The number of checks before the instance is declared healthy."

### fn spec.forProvider.healthCheck.withInterval

```ts
withInterval(interval)
```

"The publishing interval in minutes. Valid values: 5 and 60. Default: 60"

### fn spec.forProvider.healthCheck.withTarget

```ts
withTarget(target)
```

"The target of the check. Valid pattern is \"${PROTOCOL}:${PORT}${PATH}\", where PROTOCOL\nvalues are:"

### fn spec.forProvider.healthCheck.withTimeout

```ts
withTimeout(timeout)
```

"The length of time before the check times out."

### fn spec.forProvider.healthCheck.withUnhealthyThreshold

```ts
withUnhealthyThreshold(unhealthyThreshold)
```

"The number of checks before the instance is declared unhealthy."

## obj spec.forProvider.instancesRefs

"References to Instance in ec2 to populate instances."

### fn spec.forProvider.instancesRefs.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.instancesRefs.policy

"Policies for referencing."

### fn spec.forProvider.instancesRefs.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.instancesRefs.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.instancesSelector

"Selector for a list of Instance in ec2 to populate instances."

### fn spec.forProvider.instancesSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.instancesSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.instancesSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.instancesSelector.policy

"Policies for selection."

### fn spec.forProvider.instancesSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.instancesSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.listener

"A list of listener blocks. Listeners documented below."

### fn spec.forProvider.listener.withInstancePort

```ts
withInstancePort(instancePort)
```

"The port on the instance to route to"

### fn spec.forProvider.listener.withInstanceProtocol

```ts
withInstanceProtocol(instanceProtocol)
```

"The protocol to use to the instance. Valid\nvalues are HTTP, HTTPS, TCP, or SSL"

### fn spec.forProvider.listener.withLbPort

```ts
withLbPort(lbPort)
```

"The port to listen on for the load balancer"

### fn spec.forProvider.listener.withLbProtocol

```ts
withLbProtocol(lbProtocol)
```

"The protocol to listen on. Valid values are HTTP,\nHTTPS, TCP, or SSL"

### fn spec.forProvider.listener.withSslCertificateId

```ts
withSslCertificateId(sslCertificateId)
```

"The ARN of an SSL certificate you have\nuploaded to AWS IAM. Note ECDSA-specific restrictions below.  Only valid when"

## obj spec.forProvider.subnetsRefs

"References to Subnet in ec2 to populate subnets."

### fn spec.forProvider.subnetsRefs.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.subnetsRefs.policy

"Policies for referencing."

### fn spec.forProvider.subnetsRefs.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.subnetsRefs.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.subnetsSelector

"Selector for a list of Subnet in ec2 to populate subnets."

### fn spec.forProvider.subnetsSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.subnetsSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.subnetsSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.subnetsSelector.policy

"Policies for selection."

### fn spec.forProvider.subnetsSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.subnetsSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider

"THIS IS A BETA FIELD. It will be honored\nunless the Management Policies feature flag is disabled.\nInitProvider holds the same fields as ForProvider, with the exception\nof Identifier and other resource reference fields. The fields that are\nin InitProvider are merged into ForProvider when the resource is created.\nThe same fields are also added to the terraform ignore_changes hook, to\navoid updating them after creation. This is useful for fields that are\nrequired on creation, but we do not desire to update them after creation,\nfor example because of an external controller is managing them, like an\nautoscaler."

### fn spec.initProvider.withAccessLogs

```ts
withAccessLogs(accessLogs)
```

"An Access Logs block. Access Logs documented below."

### fn spec.initProvider.withAccessLogsMixin

```ts
withAccessLogsMixin(accessLogs)
```

"An Access Logs block. Access Logs documented below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withAvailabilityZones

```ts
withAvailabilityZones(availabilityZones)
```

"The AZ's to serve traffic in."

### fn spec.initProvider.withAvailabilityZonesMixin

```ts
withAvailabilityZonesMixin(availabilityZones)
```

"The AZ's to serve traffic in."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withConnectionDraining

```ts
withConnectionDraining(connectionDraining)
```

"Boolean to enable connection draining. Default: false"

### fn spec.initProvider.withConnectionDrainingTimeout

```ts
withConnectionDrainingTimeout(connectionDrainingTimeout)
```

"The time in seconds to allow for connections to drain. Default: 300"

### fn spec.initProvider.withCrossZoneLoadBalancing

```ts
withCrossZoneLoadBalancing(crossZoneLoadBalancing)
```

"Enable cross-zone load balancing. Default: true"

### fn spec.initProvider.withDesyncMitigationMode

```ts
withDesyncMitigationMode(desyncMitigationMode)
```

"Determines how the load balancer handles requests that might pose a security risk to an application due to HTTP desync. Valid values are monitor, defensive (default), strictest."

### fn spec.initProvider.withHealthCheck

```ts
withHealthCheck(healthCheck)
```

"A health_check block. Health Check documented below."

### fn spec.initProvider.withHealthCheckMixin

```ts
withHealthCheckMixin(healthCheck)
```

"A health_check block. Health Check documented below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withIdleTimeout

```ts
withIdleTimeout(idleTimeout)
```

"The time in seconds that the connection is allowed to be idle. Default: 60"

### fn spec.initProvider.withInstances

```ts
withInstances(instances)
```

"A list of instance ids to place in the ELB pool."

### fn spec.initProvider.withInstancesMixin

```ts
withInstancesMixin(instances)
```

"A list of instance ids to place in the ELB pool."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withInstancesRefs

```ts
withInstancesRefs(instancesRefs)
```

"References to Instance in ec2 to populate instances."

### fn spec.initProvider.withInstancesRefsMixin

```ts
withInstancesRefsMixin(instancesRefs)
```

"References to Instance in ec2 to populate instances."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withInternal

```ts
withInternal(internal)
```

"If true, ELB will be an internal ELB."

### fn spec.initProvider.withListener

```ts
withListener(listener)
```

"A list of listener blocks. Listeners documented below."

### fn spec.initProvider.withListenerMixin

```ts
withListenerMixin(listener)
```

"A list of listener blocks. Listeners documented below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withSecurityGroups

```ts
withSecurityGroups(securityGroups)
```

"A list of security group IDs to assign to the ELB.\nOnly valid if creating an ELB within a VPC"

### fn spec.initProvider.withSecurityGroupsMixin

```ts
withSecurityGroupsMixin(securityGroups)
```

"A list of security group IDs to assign to the ELB.\nOnly valid if creating an ELB within a VPC"

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withSourceSecurityGroup

```ts
withSourceSecurityGroup(sourceSecurityGroup)
```

"The name of the security group that you can use as\npart of your inbound rules for your load balancer's back-end application\ninstances. Use this for Classic or Default VPC only."

### fn spec.initProvider.withSubnets

```ts
withSubnets(subnets)
```

"A list of subnet IDs to attach to the ELB. When an update to subnets will remove all current subnets, this will force a new resource."

### fn spec.initProvider.withSubnetsMixin

```ts
withSubnetsMixin(subnets)
```

"A list of subnet IDs to attach to the ELB. When an update to subnets will remove all current subnets, this will force a new resource."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withSubnetsRefs

```ts
withSubnetsRefs(subnetsRefs)
```

"References to Subnet in ec2 to populate subnets."

### fn spec.initProvider.withSubnetsRefsMixin

```ts
withSubnetsRefsMixin(subnetsRefs)
```

"References to Subnet in ec2 to populate subnets."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withTags

```ts
withTags(tags)
```

"Key-value map of resource tags."

### fn spec.initProvider.withTagsMixin

```ts
withTagsMixin(tags)
```

"Key-value map of resource tags."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.accessLogs

"An Access Logs block. Access Logs documented below."

### fn spec.initProvider.accessLogs.withBucket

```ts
withBucket(bucket)
```

"The S3 bucket name to store the logs in."

### fn spec.initProvider.accessLogs.withBucketPrefix

```ts
withBucketPrefix(bucketPrefix)
```

"The S3 bucket prefix. Logs are stored in the root if not configured."

### fn spec.initProvider.accessLogs.withEnabled

```ts
withEnabled(enabled)
```

"Boolean to enable / disable access_logs. Default is true"

### fn spec.initProvider.accessLogs.withInterval

```ts
withInterval(interval)
```

"The publishing interval in minutes. Valid values: 5 and 60. Default: 60"

## obj spec.initProvider.healthCheck

"A health_check block. Health Check documented below."

### fn spec.initProvider.healthCheck.withHealthyThreshold

```ts
withHealthyThreshold(healthyThreshold)
```

"The number of checks before the instance is declared healthy."

### fn spec.initProvider.healthCheck.withInterval

```ts
withInterval(interval)
```

"The publishing interval in minutes. Valid values: 5 and 60. Default: 60"

### fn spec.initProvider.healthCheck.withTarget

```ts
withTarget(target)
```

"The target of the check. Valid pattern is \"${PROTOCOL}:${PORT}${PATH}\", where PROTOCOL\nvalues are:"

### fn spec.initProvider.healthCheck.withTimeout

```ts
withTimeout(timeout)
```

"The length of time before the check times out."

### fn spec.initProvider.healthCheck.withUnhealthyThreshold

```ts
withUnhealthyThreshold(unhealthyThreshold)
```

"The number of checks before the instance is declared unhealthy."

## obj spec.initProvider.instancesRefs

"References to Instance in ec2 to populate instances."

### fn spec.initProvider.instancesRefs.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.instancesRefs.policy

"Policies for referencing."

### fn spec.initProvider.instancesRefs.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.instancesRefs.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.instancesSelector

"Selector for a list of Instance in ec2 to populate instances."

### fn spec.initProvider.instancesSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.instancesSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.instancesSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.instancesSelector.policy

"Policies for selection."

### fn spec.initProvider.instancesSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.instancesSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.listener

"A list of listener blocks. Listeners documented below."

### fn spec.initProvider.listener.withInstancePort

```ts
withInstancePort(instancePort)
```

"The port on the instance to route to"

### fn spec.initProvider.listener.withInstanceProtocol

```ts
withInstanceProtocol(instanceProtocol)
```

"The protocol to use to the instance. Valid\nvalues are HTTP, HTTPS, TCP, or SSL"

### fn spec.initProvider.listener.withLbPort

```ts
withLbPort(lbPort)
```

"The port to listen on for the load balancer"

### fn spec.initProvider.listener.withLbProtocol

```ts
withLbProtocol(lbProtocol)
```

"The protocol to listen on. Valid values are HTTP,\nHTTPS, TCP, or SSL"

### fn spec.initProvider.listener.withSslCertificateId

```ts
withSslCertificateId(sslCertificateId)
```

"The ARN of an SSL certificate you have\nuploaded to AWS IAM. Note ECDSA-specific restrictions below.  Only valid when"

## obj spec.initProvider.subnetsRefs

"References to Subnet in ec2 to populate subnets."

### fn spec.initProvider.subnetsRefs.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.subnetsRefs.policy

"Policies for referencing."

### fn spec.initProvider.subnetsRefs.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.subnetsRefs.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.subnetsSelector

"Selector for a list of Subnet in ec2 to populate subnets."

### fn spec.initProvider.subnetsSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.subnetsSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.subnetsSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.subnetsSelector.policy

"Policies for selection."

### fn spec.initProvider.subnetsSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.subnetsSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to\ncreate, observe, update, and delete this managed resource should be\nconfigured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which\ncontains a name, metadata and a reference to secret store config to\nwhich any connection details for this managed resource should be written.\nConnection details frequently include the endpoint, username,\nand password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used\nfor this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret.\n- Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a\nSecret to which any connection details for this managed resource should\nbe written. Connection details frequently include the endpoint, username,\nand password required to connect to the managed resource.\nThis field is planned to be replaced in a future release in favor of\nPublishConnectionDetailsTo. Currently, both could be set independently\nand connection details would be published to both without affecting\neach other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."